--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,39 @@
+__pycache__/
+
+# LaTeX auxiliary files
+*.aux
+*.bbl
+*.blg
+*.brf
+*.fdb_latexmk
+*.fls
+*.log
+*.nav
+*.out
+*.snm
+*.synctex.gz
+*.toc
+*.lof
+*.lot
+*.xdv
+*.pdfsync
+*.synctex(busy)
+*.acn
+*.acr
+*.alg
+*.glg
+*.glo
+*.gls
+*.ist
+*.maf
+*.mtc*
+*.slg
+*.slo
+*.sls
+*~
+*.bak
+
+
 # Logs
 logs
 *.log
@@ -25,4 +61,3 @@ dist-ssr
 
 # Backend Stuff
 data/
-models/
